; ModuleID = '/home/carl/AnghaBench/openssl/apps/lib/extr_apps.c_print_cert_checks.c'
source_filename = "/home/carl/AnghaBench/openssl/apps/lib/extr_apps.c_print_cert_checks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [38 x i8] c"Hostname %s does%s match certificate\0A\00", align 1
@.str.1 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.2 = private unnamed_addr constant [5 x i8] c" NOT\00", align 1
@.str.3 = private unnamed_addr constant [35 x i8] c"Email %s does%s match certificate\0A\00", align 1
@.str.4 = private unnamed_addr constant [32 x i8] c"IP %s does%s match certificate\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @print_cert_checks(i32* %0, i32* %1, i8* %2, i8* %3, i8* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %11 = load i32*, i32** %7, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %5
  br label %53

14:                                               ; preds = %5
  %15 = load i8*, i8** %8, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %27

17:                                               ; preds = %14
  %18 = load i32*, i32** %6, align 8
  %19 = load i8*, i8** %8, align 8
  %20 = load i32*, i32** %7, align 8
  %21 = load i8*, i8** %8, align 8
  %22 = call i32 @X509_check_host(i32* %20, i8* %21, i32 0, i32 0, i32* null)
  %23 = icmp eq i32 %22, 1
  %24 = zext i1 %23 to i64
  %25 = select i1 %23, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0)
  %26 = call i32 @BIO_printf(i32* %18, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), i8* %19, i8* %25)
  br label %27

27:                                               ; preds = %17, %14
  %28 = load i8*, i8** %9, align 8
  %29 = icmp ne i8* %28, null
  br i1 %29, label %30, label %40

30:                                               ; preds = %27
  %31 = load i32*, i32** %6, align 8
  %32 = load i8*, i8** %9, align 8
  %33 = load i32*, i32** %7, align 8
  %34 = load i8*, i8** %9, align 8
  %35 = call i64 @X509_check_email(i32* %33, i8* %34, i32 0, i32 0)
  %36 = icmp ne i64 %35, 0
  %37 = zext i1 %36 to i64
  %38 = select i1 %36, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0)
  %39 = call i32 @BIO_printf(i32* %31, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.3, i64 0, i64 0), i8* %32, i8* %38)
  br label %40

40:                                               ; preds = %30, %27
  %41 = load i8*, i8** %10, align 8
  %42 = icmp ne i8* %41, null
  br i1 %42, label %43, label %53

43:                                               ; preds = %40
  %44 = load i32*, i32** %6, align 8
  %45 = load i8*, i8** %10, align 8
  %46 = load i32*, i32** %7, align 8
  %47 = load i8*, i8** %10, align 8
  %48 = call i64 @X509_check_ip_asc(i32* %46, i8* %47, i32 0)
  %49 = icmp ne i64 %48, 0
  %50 = zext i1 %49 to i64
  %51 = select i1 %49, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0)
  %52 = call i32 @BIO_printf(i32* %44, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.4, i64 0, i64 0), i8* %45, i8* %51)
  br label %53

53:                                               ; preds = %13, %43, %40
  ret void
}

declare dso_local i32 @BIO_printf(i32*, i8*, i8*, i8*) #1

declare dso_local i32 @X509_check_host(i32*, i8*, i32, i32, i32*) #1

declare dso_local i64 @X509_check_email(i32*, i8*, i32, i32) #1

declare dso_local i64 @X509_check_ip_asc(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
